# Verified-Impact-NFTs

./: .env  .env.bf-staging  .env.bf_master  .env.example  .env.master  .env.staging  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  bitbucket-pipelines.yml  jsdoc.json  package-lock.json  package.json
caching-server/: cep47.ts  index.ts  package-lock.json  package.json  serverless.ts  tsconfig.json  webpack.config.js
contracts/: Cargo.toml  Makefile  rust-toolchain
contracts/profile/vi_profile/: Cargo.toml
contracts/profile/vi_profile/src/: profiles_control.rs  vi_profile.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: lib.rs  vi_instance.rs  vi_tests.rs
contracts/tests/wasm/: vi-token.wasm
contracts/vi_nft/: Cargo.toml
contracts/vi_nft/src/: beneficiaries_control.rs  collection_control.rs  collection_data.rs  creator_control.rs  creator_data.rs  vi_token.rs
cors-proxy-server/: serverless.yml
deploy-scripts/: .env  .env.bf-master  .env.bf-staging  .env.bf_master  .env.example  .env.master  .gitignore  cep47.ts  deployAddBeneficiary.ts  deployAddProfile.ts  deployApproveBeneficiary.ts  deployInitNFTs.ts  getDeployDetails.ts  install-factory.ts  install-profile.ts  install.ts  install_profile.ts  package.json
docs/: BenefeiciaryNFTs.js.html  Element_BuyNFT.js.html  Element_ListForSaleNFT.js.html  Element_NFTCard.js.html  Element_Tooltip_index.js.html  MyCreations.js.html  Pages_Admin_AddBeneficiary.js.html  Pages_Admin_AddCampaign.js.html  Pages_Admin_MintNFT.js.html  Pages_NFTDetail.js.html  Pages_NFTs_BenefeiciaryNFTs.js.html  Pages_NFTs_CreatorNFTs.js.html  global.html  (+8 more)
(+272 files in other folders)
