[package]
name = "tests"
version = "0.1.0"
authors = ["astro019 <dmitry.yakov7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = { version = "1.4.3", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.0.3", features = ["test-support"] }
casper-execution-engine = { version = "1.5.0", optional = true }
casper-types = "1.4.4"
sysconf= "0.3.4"
test-env = { path = "../utils/test-env" }
hex = "0.4.3"
blake2 = "0.10.4"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]