[package]
name = "vi_nft"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
cep47 = { git="https://github.com/Ebrahim-hamdy/casper-nft-cep47", branch="master" }

[[bin]]
name = "vi-token"
path = "src/vi_token.rs"
bench = false
doctest = false
test = false