[package]
name = "vi_profile"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.4"
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "vi-profile"
path = "src/vi_profile.rs"
bench = false
doctest = false
test = false